--- a/AOP-XSD1/pom.xml
+++ b/AOP-XSD1/pom.xml
@@ -39,5 +39,14 @@
 			<artifactId>spring-context</artifactId>
 			<version>6.2.1</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>1.9.22.1</version>
+			<scope>runtime</scope>
+		</dependency>
+
 	</dependencies>
 </project>
