--- a/Spring-WEB-MVC-3/pom.xml
+++ b/Spring-WEB-MVC-3/pom.xml
@@ -1,21 +1,22 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>in.vineetkundu</groupId>
-  <artifactId>Spring-WEB-MVC-3</artifactId>
-  <packaging>war</packaging>
-  <version>1.0</version>
-  <name>Spring-WEB-MVC-3 Maven Webapp</name>
-  <url>http://maven.apache.org</url>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-    
-     <!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>in.vineetkundu</groupId>
+	<artifactId>Spring-WEB-MVC-3</artifactId>
+	<packaging>war</packaging>
+	<version>1.0</version>
+	<name>Spring-WEB-MVC-3 Maven Webapp</name>
+	<url>http://maven.apache.org</url>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
@@ -46,8 +47,8 @@
 			<version>6.2.2</version>
 		</dependency>
 
-  </dependencies>
-  <build>
-    <finalName>Spring-WEB-MVC-3</finalName>
-  </build>
+	</dependencies>
+	<build>
+		<finalName>Spring-WEB-MVC-3</finalName>
+	</build>
 </project>
