--- a/SpringBoot1WEB1/pom.xml
+++ b/SpringBoot1WEB1/pom.xml
@@ -35,6 +35,8 @@
 			<artifactId>junit</artifactId>
 			<version>3.8.1</version>
 			<scope>test</scope>
+
+
 		</dependency>
 
 		<!--
@@ -43,6 +45,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 			<version>3.4.3</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-jasper -->
+		<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>tomcat-jasper</artifactId>
+			<version>11.0.5</version>
 		</dependency>
 
 	</dependencies>
